# brainglobe-space

./: .pre-commit-config.yaml  .travis.yml  =0.1.4  CITATION.cff  MANIFEST.in  README.md  noxfile.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test_and_deploy.yml
bg_space/: __init__.py  core.py  functions.py  utils.py
bgspace/: __init__.py  core.py  functions.py  transformations.py
brainglobe_space/: __init__.py  core.py  functions.py
tests/: conftest.py  test_core.py  test_functions.py  test_rigidity.py  utils.py
