[project]
name = "brainglobe_space"
description = "Anatomical space conventions made easy"
readme = "README.md"
authors = [{ name = "Luigi Petrucco", email = "luigi.petrucco@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = ["numpy", "scipy"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/brainglobe/brainglobe-space"

[project.optional-dependencies]
dev = ["gitpython", "pre-commit", "pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["brainglobe_space*"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.black]
target-version = ['py39', 'py310', 'py311']
skip-string-normalization = false
line-length = 79

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
select = ["I", "E", "F"]
fix = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{39,310,311}

[gh-actions]
python =
    3.9: py39
    3.10: py310
    3.11: py311

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=brainglobe_space --cov-report=xml
"""
