[project]
name = "brainglobe_space"
description = "Anatomical space conventions made easy"
readme = "README.md"
authors = [{ name = "Luigi Petrucco", email = "luigi.petrucco@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = ["numpy", "scipy"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/brainglobe/brainglobe-space"

[project.optional-dependencies]
dev = ["gitpython", "pre-commit", "pytest", "pytest-cov"]

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["brainglobe_space*"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
filterwarnings = ["error"]

[tool.black]
target-version = ['py311','py312', 'py313']
skip-string-normalization = false
line-length = 79

[tool.ruff]
line-length = 79
exclude = ["__init__.py", "build", ".eggs"]
select = ["I", "E", "F"]
fix = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{311,312,313}

[gh-actions]
python =
    3.11: py311
    3.12: py312
    3.13: py313

[testenv]
extras =
    dev
commands =
    pytest -v --color=yes --cov=brainglobe_space --cov-report=xml
"""
